Title alignment fixed, dark mode color issue fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,6 @@
 }
 
 .titleBar {
-  text-align: center;
   padding: 1rem;
   font-size: 2rem;
   height: 5rem;
@@ -12,6 +11,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.title {
+  flex: 1;
+  text-align: center;
 }
 
 .home {
