--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -53,7 +53,7 @@
 
 .selected {
   border: 0.5px solid var(--secondary);
-  background-color: var(--light-caramel);
+  background-color: var(--selected-bg);
 }
 
 .navigation {
